--- a/app/countries-2.html
+++ b/app/countries-2.html
@@ -68,7 +68,7 @@
                         </div>
                         <div class="search__block">
                             <ul class="search__list">
-                                @@loop("html/_search-cards.html", [
+                                @@loop("html/_search-cards-2.html", [
                                     {},
                                     {},
                                     {},
