--- a/app/countries-founded.html
+++ b/app/countries-founded.html
@@ -67,7 +67,10 @@
                             </div>
                         </div>
                         <div class="search__block">
-                            <ul class="search__list">
+                            <div class="search__founded">
+                                Found <strong>23 results</strong> for your query
+                            </div>
+                            <ul class="search__list blur">
                                 @@loop("html/_search-cards.html", [
                                     {},
                                     {},
