--- a/app/html/_header.html
+++ b/app/html/_header.html
@@ -18,7 +18,16 @@
                     <nav class="header__nav">
                         <div class="header__nav--body">
                             <div class="header__nav--decor-title">
-                                Menu
+                                 <!-- NEW -->
+                                 <div class="arrays">
+                                    <div class="sec"></div>
+                                    <div class="sec"></div>
+                                    <div class="sec"></div>
+                                    <div class="sec"></div>
+                                    <div class="sec"></div>
+                                </div>
+                                <span>Menu</span>
+                                <!-- NEW -->
                             </div>
                             <ul class="header__nav--list">
                                 <li class="header__nav--item" style="animation-delay: 0.5s;">
