--- a/app/countries-founded.html
+++ b/app/countries-founded.html
@@ -68,7 +68,7 @@
                         </div>
                         <div class="search__block">
                             <div class="search__founded">
-                                Found <strong>23 results</strong> for your query
+                                Found <strong>23 results</strong> for your query. <a href="sign-up.html">Register</a> to make the results available to you.
                             </div>
                             <ul class="search__list blur">
                                 @@loop("html/_search-cards.html", [
