--- a/app/send-us-an-email.html
+++ b/app/send-us-an-email.html
@@ -19,14 +19,10 @@
                             <input type="email" name="email" placeholder="Your e-mail" class="form-page__input input">
                         </label>
                         <label class="form-page__label">
-                            <span class="form-page__label--legend">Confirmation</span>
-                            <input type="text" name="confirmation" placeholder="http://" class="form-page__input input">
-                        </label>
-                        <label class="form-page__label">
                             <span class="form-page__label--legend">Phone</span>
                             <input type="tel" name="phone" placeholder="+7 (123) 456-765-56" class="form-page__input input">
                         </label>
-                        <label class="form-page__label _large">
+                        <label class="form-page__label _super-large">
                             <span class="form-page__label--legend">Information</span>
                             <input type="text" name="message" placeholder="Message text" class="form-page__input input">
                         </label>
