--- a/app/index.html
+++ b/app/index.html
@@ -34,10 +34,10 @@
                     <h1 class="database__title main-title decor-line">
                         <span class="decor-span" data-decor-delay="0.0s"><span>Full database of sanctioned, politically</span></span> <span class="decor-span" data-decor-delay="0.2s"><span>exposed persons and persons under special</span></span> <span class="decor-span" data-decor-delay="0.4s"><span>interest</span></span>
                     </h1>
-                    <div class="database__text">
+                    <div class="database__text" data-aos="fade-right" data-aos-duration="500">
                         Base of suspicious persons in Russia, Ukraine, Belarus, Kazakhstan here:
                     </div>
-                    <form action="#" class="database__form">
+                    <form action="#" class="database__form" data-aos="fade-right"  data-aos-duration="750">
                         <label class="database__label">
                             <input type="text" name="key" placeholder="Enter the name of the person or company" required class="database__input">
                         </label>
@@ -49,10 +49,10 @@
             </section>
             <section class="tag-cloud">
                 <div class="tag-cloud__container container">
-                    <h2 class="tag-cloud__title section-title decor-line">
+                    <h2 class="tag-cloud__title section-title decor-line" data-aos="fade-down" data-aos-duration="1000" data-aos-anchor=".tag-cloud">
                         Tag Cloud
                     </h2>
-                    <ul class="tag-cloud__list">
+                    <ul class="tag-cloud__list" data-aos="fade-right" data-aos-duration="1200" data-aos-anchor=".tag-cloud">
                         <li class="tag-cloud__item">
                             <div class="tag-cloud__item--body">
                                 Officials
@@ -178,11 +178,11 @@
             </section>
             <section class="statistics">
                 <div class="statistics__container container">
-                    <h2 class="statistics__title section-title decor-line">
+                    <h2 class="statistics__title section-title decor-line" data-aos="fade-down" data-aos-duration="1000" data-aos-anchor=".statistics">
                         Statistics
                     </h2>
                     <ul class="statistics__list">
-                        <li class="statistics__card">
+                        <li class="statistics__card" data-aos="flip-up" data-aos-duration="1000" data-aos-anchor=".statistics">
                             <div class="statistics__card--body">
                                 <span class="statistics__card--decor-title">
                                     Articles 
@@ -195,7 +195,7 @@
                                 </h3>
                             </div>
                         </li>
-                        <li class="statistics__card">
+                        <li class="statistics__card" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="400" data-aos-anchor=".statistics">
                             <div class="statistics__card--body">
                                 <span class="statistics__card--decor-title">
                                     Profiles of individuals
@@ -208,7 +208,7 @@
                                 </h3>
                             </div>
                         </li>
-                        <li class="statistics__card">
+                        <li class="statistics__card" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="600" data-aos-anchor=".statistics">
                             <div class="statistics__card--body">
                                 <span class="statistics__card--decor-title">
                                     Profiles of public figures
@@ -221,7 +221,7 @@
                                 </h3>
                             </div>
                         </li>
-                        <li class="statistics__card">
+                        <li class="statistics__card" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="800" data-aos-anchor=".statistics">
                             <div class="statistics__card--body">
                                 <span class="statistics__card--decor-title">
                                     Profiles of related and close people
@@ -239,11 +239,11 @@
             </section>
             <section class="why-we-work">
                 <div class="why-we-work__container container">
-                    <h2 class="why-we-work__title section-title decor-line">
+                    <h2 class="why-we-work__title section-title decor-line" data-aos="fade-down" data-aos-duration="1000" data-aos-anchor=".why-we-work">
                         Why we work?
                     </h2>
                     <ul class="why-we-work__list">
-                        <li class="why-we-work__item">
+                        <li class="why-we-work__item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400" data-aos-anchor=".why-we-work">
                             <div class="why-we-work__item--body">
                                 <h3 class="why-we-work__item--title">
                                     Corrupt high-ranking <br> officials
@@ -253,7 +253,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="why-we-work__item">
+                        <li class="why-we-work__item" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="600" data-aos-anchor=".why-we-work">
                             <div class="why-we-work__item--body">
                                 <h3 class="why-we-work__item--title">
                                     Special rules have been introduced in <br>the world 
@@ -263,7 +263,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="why-we-work__item">
+                        <li class="why-we-work__item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800" data-aos-anchor=".why-we-work">
                             <div class="why-we-work__item--body">
                                 <h3 class="why-we-work__item--title">
                                     If the client is a politically exposed person
