--- a/app/article.html
+++ b/app/article.html
@@ -7,15 +7,15 @@
             <section class="article">
                 <div class="article__container container">
                     <div class="article__wrapper">
-                        <h1 class="article__title main-title decor-line">
+                        <h1 class="article__title main-title decor-line" data-aos="fade-down">
                             Article title. Ultricies nec, pellentesque eu, pretium quis, sem.
                         </h1>
                         <div class="article__main relative">
                             <div class="article__header">
-                                <div class="article__decor-text decor-text">Article</div>
+                                <div class="article__decor-text decor-text" data-aos="fade-right" data-aos-delay="400">Article</div>
                                 <div class="article__base-info">
                                     <ul class="article__base-info--list">
-                                        <li class="article__base-info--item">
+                                        <li class="article__base-info--item" data-aos="fade-right" data-aos-delay="600">
                                             <div class="article__base-info--icon">
                                                 <img src="img/calendar.svg" width="30" height="30" alt="">
                                             </div>
@@ -23,7 +23,7 @@
                                                 12.12.2022
                                             </time>
                                         </li>
-                                        <li class="article__base-info--item">
+                                        <li class="article__base-info--item" data-aos="fade-right" data-aos-delay="700">
                                             <div class="article__base-info--icon">
                                                 <img src="img/search-worldwide.svg" width="34" height="34" alt="">
                                             </div>
@@ -35,37 +35,37 @@
                                 </div>
                             </div>
                             <div class="article__content">
-                                <p>
+                                <p data-aos="fade-in">
                                     Thus, a new model of organizational activity plays an important role in the formation of systems of mass participation. The significance of these problems is so obvious that the implementation of the planned targets contributes to the preparation and implementation of the appropriate activation conditions.
                                 </p>
-                                <p>
+                                <p data-aos="fade-in">
                                     Comrades! the existing structure of the organization plays an important role in shaping the appropriate conditions for activation. Ideological considerations of a higher order, as well as the beginning of everyday work on the formation of a position, provide a wide range of (specialists) participation in the formation of further development directions. It should not be forgotten, however, that consultation with a wide range of activists largely determines the creation of systems of mass participation.
                                 </p>
-                                <p>
+                                <p data-aos="fade-in">
                                     The task of the organization, in particular the strengthening and development of the structure, entails the process of introducing and modernizing the personnel training system, meets the urgent needs. Similarly, the established structure of the organization contributes to the preparation and implementation of directions for progressive development. The task of the organization, in particular the constant information and propaganda support of our activities, allows us to carry out important tasks in developing forms of development. The task of the organization, in particular the further development of various forms of activity, entails the process of introducing and modernizing the forms of development.
                                 </p>
-                                <q>
+                                <q data-aos="fade-in">
                                     “The scale of the exhibition is striking: it brings together the latest achievements in the field of labor protection, unique developments that are not yet on the market.
                                 </q>
-                                <h2>
+                                <h2 data-aos="fade-in">
                                     On the other hand, the implementation of planned targets assesses the significance of the form of development.
                                 </h2>
                                 <ul>
-                                    <li>
+                                    <li data-aos="fade-in">
                                         On the other hand, the implementation of the planned targets makes it possible to assess the significance of the forms of development. The task of the organization, in particular the strengthening and development of the structure, entails the process of implementation.
                                     </li>
-                                    <li>
+                                    <li data-aos="fade-in">
                                         On the other hand, the implementation of the planned targets makes it possible to assess the significance of the forms of development. The task of the organization, in particular the strengthening and development of the structure, entails the process of implementation.
                                     </li>
-                                    <li>
+                                    <li data-aos="fade-in">
                                         On the other hand, the implementation of the planned targets makes it possible to assess the significance of the forms of development. The task of the organization, in particular the strengthening and development of the structure, entails the process of implementation.
                                     </li>
-                                    <li>
+                                    <li data-aos="fade-in">
                                         On the other hand, the implementation of the planned targets makes it possible to assess the significance of the forms of development. The task of the organization, in particular the strengthening and development of the structure, entails the process of implementation.
                                     </li>
                                 </ul>
                             </div>
-                            <div class="article__nav">
+                            <div class="article__nav" data-aos="fade-in">
                                 <a href="#" class="article__btn btn _light">
                                     Previous news
                                 </a>
@@ -75,11 +75,11 @@
                             </div>
                         </div>
                         <aside class="article__aside">
-                            <h2 class="article__aside--title">
+                            <h2 class="article__aside--title" data-aos="fade-in">
                                 Similar articles
                             </h2>
                             <ul class="article__aside--list">
-                                <li class="article__aside--item article__item">
+                                <li class="article__aside--item article__item" data-aos="fade-left" data-aos-delay="200">
                                     <h3 class="article__item--title">
                                         Article title. Ultricies nec, pellentesque eu, pretium quis, sem. 
                                     </h3>
@@ -90,7 +90,7 @@
                                         Read
                                     </a>
                                 </li>
-                                <li class="article__aside--item article__item">
+                                <li class="article__aside--item article__item" data-aos="fade-left" data-aos-delay="400">
                                     <h3 class="article__item--title">
                                         Article title. Ultricies nec, pellentesque eu, pretium quis, sem. 
                                     </h3>
@@ -101,7 +101,7 @@
                                         Read
                                     </a>
                                 </li>
-                                <li class="article__aside--item article__item">
+                                <li class="article__aside--item article__item" data-aos="fade-left" data-aos-delay="600">
                                     <h3 class="article__item--title">
                                         Article title. Ultricies nec, pellentesque eu, pretium quis, sem. 
                                     </h3>
@@ -112,7 +112,7 @@
                                         Read
                                     </a>
                                 </li>
-                                <li class="article__aside--item article__item">
+                                <li class="article__aside--item article__item" data-aos="fade-left" data-aos-delay="800">
                                     <h3 class="article__item--title">
                                         Article title. Ultricies nec, pellentesque eu, pretium quis, sem. 
                                     </h3>
