--- a/app/html/_search-cards-2.html
+++ b/app/html/_search-cards-2.html
@@ -1,4 +1,4 @@
-<li class="search__card">
+<li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
     <a href="#" class="search__card--body">
         <div class="search__card--header">
             <div class="search__card--icon">
@@ -22,7 +22,7 @@
         </div>
     </a>
 </li>
-<li class="search__card">
+<li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
     <a href="#" class="search__card--body">
         <div class="search__card--header">
             <div class="search__card--icon">
@@ -46,7 +46,7 @@
         </div>
     </a>
 </li>
-<li class="search__card">
+<li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
     <a href="#" class="search__card--body">
         <div class="search__card--header">
             <div class="search__card--icon">
@@ -70,7 +70,7 @@
         </div>
     </a>
 </li>
-<li class="search__card">
+<li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
     <a href="#" class="search__card--body">
         <div class="search__card--header">
             <div class="search__card--icon">
