--- a/app/html/_search-cards.html
+++ b/app/html/_search-cards.html
@@ -1,4 +1,4 @@
-<li class="search__card">
+<li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
     <a href="#" class="search__card--body">
         <div class="search__card--header">
             <div class="search__card--avatar">
@@ -33,7 +33,7 @@
         </div>
     </a>
 </li>
-<li class="search__card">
+<li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
     <a href="#" class="search__card--body">
         <div class="search__card--header">
             <div class="search__card--avatar">
@@ -56,7 +56,7 @@
         </div>
     </a>
 </li>
-<li class="search__card">
+<li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
     <a href="#" class="search__card--body">
         <div class="search__card--header">
             <div class="search__card--avatar">
@@ -86,7 +86,7 @@
         </div>
     </a>
 </li>
-<li class="search__card">
+<li class="search__card" data-aos="zoom-out" data-aos-duration="1000">
     <a href="#" class="search__card--body">
         <div class="search__card--header">
             <div class="search__card--avatar">
