--- a/app/personal-area-none-subscriptions.html
+++ b/app/personal-area-none-subscriptions.html
@@ -5,12 +5,12 @@
         <main class="main">
             <section class="personal-area">
                 <div class="personal-area__container container relative">
-                    <div class="personal-area__decor-text decor-text">Personal Area</div>
-                    <h1 class="personal-area__title main-title decor-line">
+                    <div class="personal-area__decor-text decor-text" data-aos="fade-right" data-aos-delay="400">Personal Area</div>
+                    <h1 class="personal-area__title main-title decor-line" data-aos="fade-down">
                         Personal Area
                     </h1>
                     <div class="personal-area__block">
-                        <aside class="personal-area__aside">
+                        <aside class="personal-area__aside" data-aos="fade-up" data-aos-delay="400">
                             <div class="personal-area__nav">
                                 <ul class="personal-area__nav--list">
                                     <li class="personal-area__nav--item">
@@ -33,7 +33,7 @@
                         </aside>
                         <div class="personal-area__main">
                             <div class="personal-area__my-subscriptions">
-                                <div class="personal-area__my-subscriptions--none">
+                                <div class="personal-area__my-subscriptions--none" data-aos="fade-in" data-aos-delay="500">
                                     <b>You don't have any subscriptions</b>
                                     <a href="personal-area-subscriptions.html" class="btn">Subscribe</a>
                                 </div>
