--- a/app/personal-area-subscriptions.html
+++ b/app/personal-area-subscriptions.html
@@ -5,12 +5,12 @@
         <main class="main">
             <section class="personal-area">
                 <div class="personal-area__container container relative">
-                    <div class="personal-area__decor-text decor-text">Personal Area</div>
-                    <h1 class="personal-area__title main-title decor-line">
+                    <div class="personal-area__decor-text decor-text" data-aos="fade-right" data-aos-delay="400">Personal Area</div>
+                    <h1 class="personal-area__title main-title decor-line" data-aos="fade-down">
                         Personal Area
                     </h1>
                     <div class="personal-area__block">
-                        <aside class="personal-area__aside">
+                        <aside class="personal-area__aside" data-aos="fade-up" data-aos-delay="400">
                             <div class="personal-area__nav">
                                 <ul class="personal-area__nav--list">
                                     <li class="personal-area__nav--item">
