--- a/app/sign-up.html
+++ b/app/sign-up.html
@@ -5,12 +5,12 @@
         <main class="main">
             <section class="form-page">
                 <form action="#" class="form-page__container container">
-                    <div class="form-page__decor-text decor-text">Signup form</div>
-                    <h1 class="form-page__title main-title decor-line">
+                    <div class="form-page__decor-text decor-text" data-aos="fade-right" data-aos-delay="400">Signup form</div>
+                    <h1 class="form-page__title main-title decor-line" data-aos="fade-down">
                         Signup form
                     </h1>
                     <div class="form-page__block">
-                        <div class="form-page__label">
+                        <div class="form-page__label" data-aos="fade-down" data-aos-delay="200">
                             <span class="form-page__label--legend">Gender</span>
                             <div class="form-page__switch">
                                 <div class="form-page__switch--body">
@@ -29,39 +29,39 @@
                                 </div>
                             </div>
                         </div>
-                        <label class="form-page__label">
+                        <label class="form-page__label" data-aos="fade-down" data-aos-delay="300">
                             <span class="form-page__label--legend">Company</span>
                             <input type="text" name="company" class="form-page__input input">
                         </label>
-                        <label class="form-page__label">
+                        <label class="form-page__label" data-aos="fade-down" data-aos-delay="400">
                             <span class="form-page__label--legend">Company activity</span>
                             <input type="text" name="company-activity" class="form-page__input input">
                         </label>
-                        <label class="form-page__label">
+                        <label class="form-page__label" data-aos="fade-down" data-aos-delay="500">
                             <span class="form-page__label--legend">Surname</span>
                             <input type="text" name="surname" class="form-page__input input">
                         </label>
-                        <label class="form-page__label">
+                        <label class="form-page__label" data-aos="fade-down" data-aos-delay="600">
                             <span class="form-page__label--legend">Name</span>
                             <input type="text" name="name" class="form-page__input input">
                         </label>
-                        <label class="form-page__label">
+                        <label class="form-page__label" data-aos="fade-down" data-aos-delay="700">
                             <span class="form-page__label--legend">Address</span>
                             <input type="text" name="address" class="form-page__input input">
                         </label>
-                        <label class="form-page__label">
+                        <label class="form-page__label" data-aos="fade-down" data-aos-delay="800">
                             <span class="form-page__label--legend">Mail</span>
                             <input type="email" name="email" placeholder="address@email.com" class="form-page__input input">
                         </label>
-                        <label class="form-page__label">
+                        <label class="form-page__label" data-aos="fade-down" data-aos-delay="900">
                             <span class="form-page__label--legend">Phone</span>
                             <input type="tel" name="phone" placeholder="+7 (123) 456-765-56" class="form-page__input input">
                         </label>
-                        <label class="form-page__label _full">
+                        <label class="form-page__label _full" data-aos="fade-down" data-aos-delay="1000">
                             <span class="form-page__label--legend">Text</span>
                             <input type="text" name="message" placeholder="I’m applying for subscription..." class="form-page__input input">
                         </label>
-                        <div class="form-page__footer">
+                        <div class="form-page__footer" data-aos="fade-down" data-aos-delay="1100">
                             <div class="form-page__footer--item">
                                 <a href="login.html" class="form-page__link">
                                     Login
