--- a/app/countries-founded.html
+++ b/app/countries-founded.html
@@ -7,12 +7,39 @@
             <section class="search">
                 <div class="search__container container">
                     <form action="#" class="search__form">
-                        <div class="search__decor-text decor-text">Search by country</div>
+                        <div class="search__decor-text decor-text">
+                            <div class="arrays">
+                                <div class="sec"></div>
+                                <div class="sec"></div>
+                                <div class="sec"></div>
+                                <div class="sec"></div>
+                                <div class="sec"></div>
+                            </div>
+                            <span class="decor-letters">
+                                <span>S</span>
+                                <span>e</span>
+                                <span>a</span>
+                                <span>r</span>
+                                <span>c</span>
+                                <span>h</span>
+                                <span>&nbsp;</span>
+                                <span>b</span>
+                                <span>y</span>
+                                <span>&nbsp;</span>
+                                <span>c</span>
+                                <span>o</span>
+                                <span>u</span>
+                                <span>n</span>
+                                <span>t</span>
+                                <span>r</span>
+                                <span>y</span>
+                            </span>
+                        </div>
                         <h1 class="search__title main-title decor-line">
-                            Search by country
+                            <span class="decor-span" data-decor-delay="0.0s"><span>Search by country</span></span>
                         </h1>
                         <div class="search__form--row">
-                            <div class="search__form--item">
+                            <div class="search__form--item" data-aos="fade-down" data-aos-duration="1000" data-aos-anchor=".search__form">
                                 <div class="search__form--select-wrapper select-wrapper">
                                     <select name="country" class="search__form--select select">
                                         <option disabled selected>Select country</option>
@@ -22,14 +49,14 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="search__form--item">
+                            <div class="search__form--item" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="400" data-aos-anchor=".search__form">
                                 <label class="search__form--checkbox checkbox">
                                     <input type="checkbox" name="search-in-section" class="checkbox__input">
                                     <span class="checkbox__element"></span>
                                     <span class="checkbox__text">Search in section</span>
                                 </label>
                             </div>
-                            <div class="search__form--item">
+                            <div class="search__form--item" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="800" data-aos-anchor=".search__form">
                                 <div class="search__form--select-wrapper select-wrapper">
                                     <select name="connection" class="search__form--select select">
                                         <option disabled selected>Choose a connection</option>
@@ -39,7 +66,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="search__form--item _auto">
+                            <div class="search__form--item _auto" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="1200" data-aos-anchor=".search__form">
                                 <label class="search__form--input-wrapper">
                                     <input type="text" name="search" placeholder="Enter a name or title" class="search__form--input">
                                     <svg class="search__form--input-icon" width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -51,7 +78,7 @@
                     </form>
                     <div class="search__result">
                         <div class="search__result--header decor-line">
-                            <div class="search__result--tab search__tab">
+                            <div class="search__result--tab search__tab" data-aos="fade-right" data-aos-duration="1000">
                                 <ul class="search__tab--list">
                                     <li class="search__tab--item">
                                         <a href="#" class="search__tab--btn _active">
@@ -79,7 +106,7 @@
                                 ])
                             </ul>
                         </div>
-                        <div class="search__result--footer">
+                        <div class="search__result--footer" data-aos="fade-up" data-aos-duration="1000">
                             <div class="search__pagination">
                                 <button class="search__pagination--arrow _prev" type="button" title="Prev page">
                                     <svg width="10" height="16" viewBox="0 0 10 16" fill="none" xmlns="http://www.w3.org/2000/svg">
