--- a/app/html/_subs-card.html
+++ b/app/html/_subs-card.html
@@ -1,4 +1,4 @@
-<li class="personal-area__subscriptions--item personal-area__subscriptions-card">
+<li class="personal-area__subscriptions--item personal-area__subscriptions-card" data-aos="fade-up">
     <div class="personal-area__subscriptions-card--body">
         <div class="personal-area__subscriptions-card--header">
             <h4>
