--- a/app/login.html
+++ b/app/login.html
@@ -5,25 +5,25 @@
         <main class="main">
             <section class="form-page">
                 <form action="#" class="form-page__container container">
-                    <div class="form-page__decor-text decor-text">Signup form</div>
-                    <h1 class="form-page__title main-title decor-line">
+                    <div class="form-page__decor-text decor-text" data-aos="fade-right" data-aos-delay="400">Signup form</div>
+                    <h1 class="form-page__title main-title decor-line" data-aos="fade-down">
                         Signup form
                     </h1>
                     <div class="form-page__block">
-                        <label class="form-page__label">
+                        <label class="form-page__label" data-aos="fade-down" data-aos-delay="200">
                             <span class="form-page__label--legend">Username</span>
                             <input type="text" name="username" class="form-page__input input">
                         </label>
-                        <label class="form-page__label">
+                        <label class="form-page__label" data-aos="fade-down" data-aos-delay="300">
                             <span class="form-page__label--legend">Password</span>
                             <input type="password" name="password" class="form-page__input input">
                         </label>
-                        <div class="form-page__label">
+                        <div class="form-page__label" data-aos="fade-down" data-aos-delay="400">
                             <button class="form-page__submit" type="submit">
                                 Submit
                             </button>
                         </div>
-                        <div class="form-page__label _full">
+                        <div class="form-page__label _full" data-aos="fade-down" data-aos-delay="400">
                             <a href="sign-up.html" class="form-page__link">
                                 Signup form
                             </a>
