--- a/app/person.html
+++ b/app/person.html
@@ -7,25 +7,25 @@
             <section class="person">
                 <div class="person__container container">
                     <div class="person__header relative">
-                        <div class="person__decor-text decor-text">Kys base</div>
-                        <h1 class="person__title main-title decor-line">
+                        <div class="person__decor-text decor-text" data-aos="fade-right" data-aos-duration="1000">Kys base</div>
+                        <h1 class="person__title main-title decor-line" data-aos="fade-down" data-aos-duration="1000">
                             Bouguereau Tamara Nikolaevna
                         </h1>
                         <div class="person__header--row">
                             <div class="person__tag decor-line _center">
                                 <ul class="person__tag--list">
-                                    <li class="person__tag--item">
+                                    <li class="person__tag--item" data-aos="fade-down" data-aos-delay="400" data-aos-duration="1000">
                                         Personal data
                                     </li>
-                                    <li class="person__tag--item">
+                                    <li class="person__tag--item" data-aos="fade-down" data-aos-delay="600" data-aos-duration="1000">
                                         Connections
                                     </li>
-                                    <li class="person__tag--item">
+                                    <li class="person__tag--item" data-aos="fade-down" data-aos-delay="800" data-aos-duration="1000">
                                         Career
                                     </li>
                                 </ul>
                             </div>
-                            <div class="person__download">
+                            <div class="person__download" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="1000">
                                 <ul>
                                     <li>
                                         <a href="#" title="Download PDF">
@@ -52,7 +52,7 @@
                     <article class="person__main">
                         <div class="person__main--col">
                             <div class="person__avatar decor-line _center">
-                                <div class="person__avatar--image">
+                                <div class="person__avatar--image" data-aos="fade-down">
                                     <div class="person__avatar--image-wrapper">
                                         <picture>
                                             <source srcset="img/avatar-large.webp" type="image/webp">
@@ -63,7 +63,7 @@
                             </div>
                         </div>
                         <div class="person__main--col">
-                            <div class="person__table">
+                            <div class="person__table" data-aos="fade-left" data-aos-delay="200">
                                 <div class="person__table--item">
                                     <b>
                                         Category
@@ -97,11 +97,11 @@
                                     </span>
                                 </div>
                             </div>
-                            <div class="person__text-block">
+                            <div class="person__text-block" data-aos="fade-left" data-aos-delay="200">
                                 <h3>Last position</h3>
                                 <p>OGKU "Apparatus of the Public Chamber of the Ivanovo Region", Deputy Chairman of the Public Monitoring Commission for the implementation of public control over ensuring human rights in places of detention and assistance to persons in places of detention</p>
                             </div>
-                            <div class="person__social">
+                            <div class="person__social" data-aos="fade-left" data-aos-delay="200">
                                 <b>Social media profiles:</b>
                                 <ul>
                                     <li>
@@ -120,7 +120,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="person__scheme-tags">
+                            <div class="person__scheme-tags" data-aos="fade-in" data-aos-delay="200">
                                 <div class="person__scheme-tags--body">
                                     <div class="tags">
                                         <ul class="tags__list">
@@ -205,7 +205,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="person__scheme scheme">
+                            <div class="person__scheme scheme" data-aos="fade-in" data-aos-delay="200" data-aos-anchor=".person__scheme-tags">
                                 <div class="person__scheme--wrapper">
                                     <div class="person__scheme--body scheme-body">
                                         <div class="person__scheme--item scheme-item" data-pos-x="left" data-pos-y="center">
@@ -342,11 +342,11 @@
                         </div>
                     </article>
                     <article class="person__block">
-                        <h3 class="person__block--title main-title decor-line">
+                        <h3 class="person__block--title main-title decor-line" data-aos="fade-down">
                             Career
                         </h3>
                         <ul class="person__block--list">
-                            <li class="person__block--item">
+                            <li class="person__block--item" data-aos="fade-right" data-aos-delay="100">
                                 <h4>
                                     from 2016
                                 </h4>
@@ -357,7 +357,7 @@
                                     Deputy Chairman of the Public Monitoring Commission for the implementation of public control over ensuring human rights in places of detention and assistance to persons in places of detention
                                 </p>
                             </li>
-                            <li class="person__block--item">
+                            <li class="person__block--item" data-aos="fade-right" data-aos-delay="200">
                                 <h4>
                                     from 29.07.2015; until 03.03.2017
                                 </h4>
@@ -368,7 +368,7 @@
                                     Director
                                 </p>
                             </li>
-                            <li class="person__block--item">
+                            <li class="person__block--item" data-aos="fade-right" data-aos-delay="300">
                                 <h4>
                                     from 2018
                                 </h4>
@@ -379,7 +379,7 @@
                                     Deputy Chairman of the Public Monitoring Commission for the implementation of public control over ensuring human rights in places of detention and assistance to persons in places of detention
                                 </p>
                             </li>
-                            <li class="person__block--item">
+                            <li class="person__block--item" data-aos="fade-right" data-aos-delay="400">
                                 <h4>
                                     from 2019
                                 </h4>
@@ -393,12 +393,12 @@
                         </ul>
                     </article>
                     <article class="person__block">
-                        <h3 class="person__block--title main-title decor-line">
+                        <h3 class="person__block--title main-title decor-line" data-aos="fade-down">
                             Connections
                         </h3>
                         <div class="person__block--row">
                             <div class="person__block--col">
-                                <div class="person__block--tags tags">
+                                <div class="person__block--tags tags" data-aos="fade-in" data-aos-delay="100">
                                     <ul class="tags__list">
                                         <li class="tags__item _active">
                                             <div class="tags__item--body">
@@ -419,12 +419,12 @@
                                     </ul>
                                 </div>
                                 <ul class="person__block--list">
-                                    <li class="person__block--item">
+                                    <li class="person__block--item" data-aos="fade-right" data-aos-delay="200">
                                         <h4>
                                             Bouguereau Tamara Nikolaevna
                                         </h4>
                                     </li>
-                                    <li class="person__block--item">
+                                    <li class="person__block--item" data-aos="fade-right" data-aos-delay="300">
                                         <h4>
                                             Business connections
                                         </h4>
@@ -444,7 +444,7 @@
                                             </svg>
                                         </div>
                                     </li>
-                                    <li class="person__block--item">
+                                    <li class="person__block--item" data-aos="fade-right" data-aos-delay="400">
                                         <h4>
                                             Bouguereau Tamara Nikolaevna
                                         </h4>
@@ -460,7 +460,7 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="person__block--item">
+                                    <li class="person__block--item" data-aos="fade-right" data-aos-delay="500">
                                         <h4>
                                             Business connections
                                         </h4>
@@ -477,7 +477,7 @@
                                 </ul>
                             </div>
                             <div class="person__block--col">
-                                <div class="person__block--tags tags">
+                                <div class="person__block--tags tags" data-aos="fade-in" data-aos-delay="100">
                                     <ul class="tags__list">
                                         <li class="tags__item _active">
                                             <div class="tags__item--body">
@@ -514,12 +514,12 @@
                                     </ul>
                                 </div>
                                 <ul class="person__block--list">
-                                    <li class="person__block--item">
+                                    <li class="person__block--item" data-aos="fade-right" data-aos-delay="200">
                                         <h4>
                                             Bouguereau Tamara Nikolaevna
                                         </h4>
                                     </li>
-                                    <li class="person__block--item">
+                                    <li class="person__block--item" data-aos="fade-right" data-aos-delay="300">
                                         <h4>
                                             Business connections
                                         </h4>
@@ -539,7 +539,7 @@
                                             </svg>
                                         </div>
                                     </li>
-                                    <li class="person__block--item">
+                                    <li class="person__block--item" data-aos="fade-right" data-aos-delay="400">
                                         <h4>
                                             Bouguereau Tamara Nikolaevna
                                         </h4>
@@ -555,7 +555,7 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="person__block--item">
+                                    <li class="person__block--item" data-aos="fade-right" data-aos-delay="500">
                                         <h4>
                                             Business connections
                                         </h4>
@@ -577,10 +577,10 @@
             </section>
             <section class="articles">
                 <div class="articles__container container">
-                    <h2 class="articles__title main-title decor-line">
+                    <h2 class="articles__title main-title decor-line" data-aos="fade-down">
                         Articles
                     </h2>
-                    <div class="articles__slider">
+                    <div class="articles__slider" data-aos="fade-in" data-aos-delay="400">
                         <div class="articles__slider--body swiper">
                             <ul class="articles__slider--list swiper-wrapper">
                                 <li class="articles__slider--slide articles__tag swiper-slide">
@@ -674,7 +674,7 @@
                         <button class="articles__slider--arrow swiper-button-next"></button>
                     </div>
                     <ul class="articles__list">
-                        <li class="articles__item">
+                        <li class="articles__item" data-aos="zoom-in-right">
                             <div class="articles__item--body">
                                 <h3>Article title. Ultricies nec, pellentesque eu, pretium quis, sem. </h3>
                                 <p>
@@ -685,7 +685,7 @@
                                 </a>
                             </div>
                         </li>
-                        <li class="articles__item">
+                        <li class="articles__item" data-aos="zoom-in-right">
                             <div class="articles__item--body">
                                 <h3>Article title. Ultricies nec, pellentesque eu, pretium quis, sem. </h3>
                                 <p>
@@ -696,7 +696,7 @@
                                 </a>
                             </div>
                         </li>
-                        <li class="articles__item">
+                        <li class="articles__item" data-aos="zoom-in-right">
                             <div class="articles__item--body">
                                 <h3>Article title. Ultricies nec, pellentesque eu, pretium quis, sem. </h3>
                                 <p>
@@ -707,7 +707,7 @@
                                 </a>
                             </div>
                         </li>
-                        <li class="articles__item">
+                        <li class="articles__item" data-aos="zoom-in-right">
                             <div class="articles__item--body">
                                 <h3>Article title. Ultricies nec, pellentesque eu, pretium quis, sem. </h3>
                                 <p>
@@ -718,7 +718,7 @@
                                 </a>
                             </div>
                         </li>
-                        <li class="articles__item">
+                        <li class="articles__item" data-aos="zoom-in-right">
                             <div class="articles__item--body">
                                 <h3>Article title. Ultricies nec, pellentesque eu, pretium quis, sem. </h3>
                                 <p>
@@ -729,7 +729,7 @@
                                 </a>
                             </div>
                         </li>
-                        <li class="articles__item">
+                        <li class="articles__item" data-aos="zoom-in-right">
                             <div class="articles__item--body">
                                 <h3>Article title. Ultricies nec, pellentesque eu, pretium quis, sem. </h3>
                                 <p>
@@ -740,7 +740,7 @@
                                 </a>
                             </div>
                         </li>
-                        <li class="articles__item">
+                        <li class="articles__item" data-aos="zoom-in-right">
                             <div class="articles__item--body">
                                 <h3>Article title. Ultricies nec, pellentesque eu, pretium quis, sem. </h3>
                                 <p>
@@ -751,7 +751,7 @@
                                 </a>
                             </div>
                         </li>
-                        <li class="articles__item">
+                        <li class="articles__item" data-aos="zoom-in-right">
                             <div class="articles__item--body">
                                 <h3>Article title. Ultricies nec, pellentesque eu, pretium quis, sem. </h3>
                                 <p>
